@@ -14,9 +14,7 @@
  * along with this program (LICENSE.txt); if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
  */
-package org.jamwiki.parser.jflex;
-
-import org.jamwiki.parser.ParserException;
+package org.jamwiki.parser;
 
 /**
  * Custom exception class used to indicate that the parser has nested too deeply
