@@ -96,5 +96,4 @@ template argument is: arg1</p>
 <p>template argument is: arg2</p>
 <p>template argument is: arg2</p>
 <p>template argument is: arg2</p>
-<p>template argument is: arg2</p>
 <p>template argument is: arg2 <a href="/wiki/en/Template:Infinite2" title="Template:Infinite2">Template:Infinite2</a></p>
