@@ -96,7 +96,6 @@
 <p>2. 1.  Test topic.</p>
 <p>2. 1.  Test topic.</p>
 <p>2. 1.  Test topic.</p>
-<p>2. 1.  Test topic.</p>
 <p>2. 1. <a href="/wiki/en/Special:Edit?topic=Template:Example2" class="edit" title="Template:Example2">Template:Example2</a></p>
 <p>2. <a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></p>
 <p>3. <b><a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></b></p>
@@ -175,9 +174,10 @@
 <p>3. <b>1. <a href="/wiki/en/Special:Edit?topic=Template:Example2" class="edit" title="Template:Example2">Template:Example2</a>
 <p>2. <a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></p>
 <p>3. <b><a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></b><i><b>'
-<p>3. <b><a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></b></p>
+<p>3. <b>1. <a href="/wiki/en/Special:Edit?topic=Template:Example2" class="edit" title="Template:Example2">Template:Example2</a>
+<p>2. <a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></p>
 <p>3. <b><a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></b><i>'
-<p>3. <b><a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></b></p>
+<p>3. <b><a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></b><i>'
 <p>3. <b><a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></b></p>
 <p>3. <b><a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></b></p>
 <p>3. <b><a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></b></p>
@@ -272,6 +272,8 @@
 <p>3. <b><a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></b></p>
 <p>3. <b><a href="/wiki/en/Special:Edit?topic=Template:Transclusion1" class="edit" title="Template:Transclusion1">Template:Transclusion1</a></b></p>
 </i></p>
+</i></p>
+</b></p>
 </b></i></p>
 </b></p>
 </b></p>
